data validate and error handling, render for swagg
